add lnk Register Page

--- a/Themes/user/login.html
+++ b/Themes/user/login.html
@@ -62,11 +62,22 @@
                     </div>
                 </div>
 
+                <div class="flex-sb-m w-full p-b-30">
+                    <div></div>
+                    <div>
+                        <a href="{{ url_for('user.register') }}" class="txt1">
+                            Don't have an account? register
+                        </a>
+                    </div>
+                </div>
+
+                
                 <div class="container-login100-form-btn">
                     <button class="login100-form-btn" type="submit">
                         Login
                     </button>
                 </div>
+
             </form>
         </div>
     </div>
