--- a/Themes/user/base.html
+++ b/Themes/user/base.html
@@ -5,5 +5,6 @@
 {% endblock head%}
 
 {% block body %}
+    {% include '_inc/flash-message.html' %}
     {% block content %}{% endblock content %}
 {% endblock body %}
