--- a/Themes/_inc/flash-message.html
+++ b/Themes/_inc/flash-message.html
@@ -1,7 +1,7 @@
 {% with messages = get_flashed_messages(with_categories=True) %}
     {% if messages %}
         {% for cat , msg in messages %}
-            <div class="alert alert-{{cat}}" role="alert">{{msg}}</div>
+            <div class="alert alert-{{'primary' or cat}}" role="alert">{{msg}}</div>
         {% endfor %}
     {% endif %}
 {% endwith %}
