--- a/Themes/admin/users/user.html
+++ b/Themes/admin/users/user.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="card-body">
     <h4 class="card-title">{{title}}</h4>
-    <a href="{{url_for('admin.user_show')}}">
+    <a href="{{url_for('admin.user_create')}}">
         <button type="button" class="btn btn-primary btn-fw" style="float: right; margin:10px"> Create User </button> 
     </a>
     <div class="table-responsive">
@@ -38,8 +38,8 @@
                     <td>{{user.posts_liked |length}}</td>
                     <td>{{user.posts_disliked |length}}</td>
                     <td>
-                        <a href="{{url_for('admin.user_show')}}"><button type="button" class="btn btn-primary btn-fw"> Edite </button></a> <br> <br>
-                        <a href="{{url_for('admin.user_show')}}"><button type="button" class="btn btn-danger btn-fw"> Delete </button></a>
+                        <a href="{{url_for('admin.user_edit' , user_id=user.id)}}"><button type="button" class="btn btn-primary btn-fw"> Edite </button></a> <br> <br>
+                        <a href="{{url_for('admin.user_delete' , user_id=user.id)}}"><button type="button" class="btn btn-danger btn-fw"> Delete </button></a>
                     </td>
                 </tr>
             {% endfor %}
