--- a/Themes/admin/base.html
+++ b/Themes/admin/base.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="{{ url_for('static' , filename='admin/assets/vendors/font-awesome/css/font-awesome.min.css') }}" />
         <link rel="stylesheet" href="{{ url_for('static' , filename='admin/assets/vendors/bootstrap-datepicker/bootstrap-datepicker.min.css') }}" />
         <link rel="stylesheet" href="{{ url_for('static' , filename='admin/assets/css/style.css') }}" />
+        {% block head_tag %} {% endblock head_tag%}
 {% endblock head %}
 
 {% block body %}
