--- a/Themes/admin/_inc/sidebar.html
+++ b/Themes/admin/_inc/sidebar.html
@@ -79,6 +79,24 @@
         </div>
       </li>
       
+      <li class="nav-item">
+        <a class="nav-link" data-toggle="collapse" href="#file" aria-expanded="false" aria-controls="user">
+          <i class="mdi mdi-file-multiple menu-icon"></i>
+          <span class="menu-title">File</span>
+          <i class="menu-arrow"></i>
+        </a>
+        <div class="collapse" id="file">
+          <ul class="nav flex-column sub-menu">
+            <li class="nav-item  ">
+              <a class="nav-link " href="{{ url_for('admin.library.file_show') }}">Manage Files</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('admin.library.file_upload') }}">Upload New File</a>
+            </li>
+          </ul>
+        </div>
+      </li>
+
       <li class="nav-item sidebar-actions">
         <div class="nav-link">
           <div class="mt-4">
