--- a/Themes/_inc/flash-message.html
+++ b/Themes/_inc/flash-message.html
@@ -1,7 +1,11 @@
 {% with messages = get_flashed_messages(with_categories=True) %}
     {% if messages %}
         {% for cat , msg in messages %}
-            <div class="alert alert-{{'primary' or cat}}" role="alert">{{msg}}</div>
+            {% if not cat == 'message' %}
+                <div class="alert alert-{{cat}}" role="alert">{{msg}}</div>
+            {% else %}
+                <div class="alert alert-primary" role="alert">{{msg}}</div>
+            {% endif %}
         {% endfor %}
     {% endif %}
 {% endwith %}
