Add library_views (to get the file (continued))

--- a/Themes/admin/_inc/sidebar.html
+++ b/Themes/admin/_inc/sidebar.html
@@ -88,19 +88,19 @@
         <div class="collapse" id="library">
           <ul class="nav flex-column sub-menu">
             <li class="nav-item  ">
-              <a class="nav-link " href="{{ url_for('admin.library.file_show') }}">Manage Files</a>
+              <a class="nav-link " href="{{ url_for('admin.library_admin.file_show') }}">Manage Files</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('admin.library.file_upload') }}">Upload New File</a>
+              <a class="nav-link" href="{{ url_for('admin.library_admin.file_upload') }}">Upload New File</a>
             </li>
             <li class="nav-item">
               <hr>
             </li>
             <li class="nav-item  ">
-              <a class="nav-link " href="{{ url_for('admin.library.madie_show') }}">Manage Madies</a>
+              <a class="nav-link " href="{{ url_for('admin.library_admin.madie_show') }}">Manage Madies</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('admin.library.madie_upload') }}">Upload New Madie</a>
+              <a class="nav-link" href="{{ url_for('admin.library_admin.madie_upload') }}">Upload New Madie</a>
             </li>
           </ul>
         </div>
