--- a/Themes/user/index.html
+++ b/Themes/user/index.html
@@ -2,4 +2,7 @@
 
 {% block content %}
 <h3>{{title}}</h3>
+<br>
+<h4>Full name : {{user.full_name}}</h4>
+<h4>email : {{user.email}}</h4>
 {% endblock %}
