--- a/Themes/admin/_inc/_script.html
+++ b/Themes/admin/_inc/_script.html
@@ -2,13 +2,10 @@
 <!-- endinject -->
 <!-- Plugin js for this page -->
 <script src="{{ url_for('static' , filename='admin/assets/vendors/chart.js/Chart.min.js') }}"></script>
-<script src="{{ url_for('static' , filename='admin/assets/vendors/bootstrap-datepicker/bootstrap-datepicker.min.js') }}"></script>
-<script src="{{ url_for('static' , filename='admin/assets/vendors/flot/jquery.flot.js') }}"></script>
-<script src="{{ url_for('static' , filename='admin/assets/vendors/flot/jquery.flot.resize.js') }}"></script>
-<script src="{{ url_for('static' , filename='admin/assets/vendors/flot/jquery.flot.categories.js') }}"></script>
-<script src="{{ url_for('static' , filename='admin/assets/vendors/flot/jquery.flot.fillbetween.js') }}"></script>
-<script src="{{ url_for('static' , filename='admin/assets/vendors/flot/jquery.flot.stack.js') }}"></script>
-<script src="assets/vendors/flot/jquery.flot.pie.js"></script>
+<script src="{{ url_for('static' , filename='static/assets/bootstrap/js/bootstrap.bundle.min.js') }}"></script>
+
+<script src="{{ url_for('static' , filename='static/assets/jquery/jquery.min.js') }}"></script>
+
 <!-- End plugin js for this page -->
 <!-- inject:js -->
 <script src="{{ url_for('static' , filename='admin/assets/js/off-canvas.js') }}"></script>
