Display user information in the Navbar

--- a/Themes/admin/_inc/navbar.html
+++ b/Themes/admin/_inc/navbar.html
@@ -24,13 +24,15 @@
         </li>
         <li class="nav-item  nav-profile dropdown border-0">
           <a class="nav-link dropdown-toggle" id="profileDropdown" href="#" data-toggle="dropdown">
-            <img class="nav-profile-img mr-2" alt="" src="{{ url_for('static' , filename='admin/assets/images/faces/face1.jpg') }}">
-            <span class="profile-name">Henry Klein</span>
+            {% if current_user.image == 0 or not current_user.image %}
+              <img class="nav-profile-img mr-2" style="background-color: #ffff;" src="{{ url_for('static' , filename='images/default-profile.svg') }}" alt="image">
+            {% else %}
+            <p>User image display is not implemented</p>
+          {% endif %}
+            <span class="profile-name">{{current_user.full_name}}</span>
           </a>
           <div class="dropdown-menu navbar-dropdown w-100" aria-labelledby="profileDropdown">
-            <a class="dropdown-item" href="#">
-              <i class="mdi mdi-cached mr-2 text-success"></i> Activity Log </a>
-            <a class="dropdown-item" href="#">
+            <a class="dropdown-item" href="{{ url_for('user.logout') }}">
               <i class="mdi mdi-logout mr-2 text-primary"></i> Signout </a>
           </div>
         </li>
