--- a/Themes/user/index.html
+++ b/Themes/user/index.html
@@ -13,8 +13,8 @@
                   Liks
                 </a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#disliks" role="tab" data-toggle="tab">
+            <li class="nav-item ">
+                <a class="nav-link " href="#disliks" role="tab" data-toggle="tab">
                     <i class="material-symbols-outlined">thumb_down</i>
                     Disliks
                 </a>
@@ -42,71 +42,78 @@
 </div>
 </div>
 
+<!-- <div class="col-md-3 ml-auto">
+  <img src="#" class="rounded">
+  <img src="#" class="rounded">
+</div>
+<div class="col-md-3 mr-auto">
+  <img src="#" class="rounded">
+  <img src="#" class="rounded">
+</div> -->
 
 <div class="tab-content tab-space">
     <div class="tab-pane active text-center gallery" id="liks">
           <div class="row">
-              <div class="col-md-3 ml-auto">
-                  <img src="#" class="rounded">
-                  <img src="#" class="rounded">
-              </div>
-              <div class="col-md-3 mr-auto">
-                  <img src="#" class="rounded">
-                  <img src="#" class="rounded">
-              </div>
+            
           </div>
       </div>
-    <div class="tab-pane text-center gallery" id="disliks">
+    <div class="tab-pane  text-center gallery" id="disliks">
           <div class="row">
-              <div class="col-md-3 ml-auto">
-              <img src="#" class="rounded">
-                <img src="#" class="rounded"> 
-                <img src="#" class="rounded">
-            </div>
-              <div class="col-md-3 mr-auto">
-              <img src="#" class="rounded">
-              <img src="#" class="rounded">
-              </div>
+
           </div>
       </div>
     <div class="tab-pane text-center gallery" id="favorite">
           <div class="row">
-              <div class="col-md-3 ml-auto">
-                <img src="#" class="rounded">
-              <img src="#" class="rounded">
-              </div>
-              <div class="col-md-3 mr-auto">
-                <img src="#" class="rounded">  					
-                <img src="#" class="rounded">
-                <img src="#" class="rounded">
-              </div>
+
           </div>
       </div>
       <div class="tab-pane text-center gallery" id="comments">
         <div class="row">
-            <div class="col-md-3 ml-auto">
-                <img src="#" class="rounded">
-                <img src="#" class="rounded">
-            </div>
-            <div class="col-md-3 mr-auto">
-              <img src="#" class="rounded">  					
-              <img src="#" class="rounded">
-              <img src="#" class="rounded">
-            </div>
+
         </div>
     </div>
-    <div class="tab-pane text-center gallery" id="edit-profile">
-        <div class="row">
-            <div class="col-md-3 ml-auto">
-                <img src="#" class="rounded">
-                <img src="#" class="rounded">
-            </div>
-            <div class="col-md-3 mr-auto">
-              <img src="#" class="rounded">  					
-              <img src="#" class="rounded">
-              <img src="#" class="rounded">
-            </div>
-        </div>
+    <div class="tab-pane  gallery" id="edit-profile">
+          <div class="card">
+                  <div class="card-body">
+                    <h4 class="card-title">Profile </h4>
+                    <p class="card-description">Edit Profile</p>
+                    <form class="forms-sample">
+                      {% include '_inc/form_error_msg.html' %}
+                      {{form.hidden_tag()}}
+
+                      <div class="form-group">
+                        {{ form.fullname.label }}
+                        {{ form.fullname(class='form-control') }}
+                      </div>
+                      <div class="form-group">
+                        {{ form.email.label }}
+                        {{ form.email(class='form-control') }}
+                      </div>
+                      <div class="form-group">
+                        {{ form.password.label }}
+                        {{ form.password(class='form-control') }}
+                      </div>
+                      <div class="form-group">
+                        {{ form.confirm_password.label }}
+                        {{ form.confirm_password(class='form-control') }}
+                      </div>
+                      <div class="form-group">
+                        {{ form.bio.label }}
+                        {{ form.bio(class='form-control') }}
+                      </div>
+                      <div class="form-group">
+                        {{ form.profile_image.label }}
+                        <div class="custom-file">
+                          {{ form.profile_image(class="custom-file-input" )}} 
+                          <label class="custom-file-label" for="inputGroupFile01" style="margin-top:2px;">{{ form.profile_image.label.text }}</label>
+                        </div>
+                      </div>
+                      <button type="submit" class="btn btn-primary mr-2"> Submit </button>
+                      <a  href="{{ url_for('user.profile') }}" class="btn btn-light">Cancel</a>
+                    </form>
+                  </div>
+                </div>
+        
     </div>
   </div>
 {% endblock %}
