Changing tab through dynamic URL

--- a/Themes/user/index.html
+++ b/Themes/user/index.html
@@ -6,7 +6,7 @@
         <div class="profile-tabs">
           <ul class="nav nav-pills nav-pills-icons justify-content-center" role="tablist">
             <li class="nav-item">
-                <a class="nav-link active" href="#liks" role="tab" data-toggle="tab">
+                <a class="nav-link {{ 'active' if tab == 'like' }}" href="#liks" role="tab" data-toggle="tab">
                     <i class="material-symbols-outlined">
                         thumb_up
                     </i>
@@ -14,25 +14,25 @@
                 </a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link " href="#disliks" role="tab" data-toggle="tab">
+                <a class="nav-link {{ 'active' if tab == 'disliks' }} " href="#disliks" role="tab" data-toggle="tab">
                     <i class="material-symbols-outlined">thumb_down</i>
                     Disliks
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#favorite" role="tab" data-toggle="tab">
+                <a class="nav-link {{ 'active' if tab == 'favorite' }}" href="#favorite" role="tab" data-toggle="tab">
                   <i class="material-icons">favorite</i>
                     Favorite
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#comments" role="tab" data-toggle="tab">
+                <a class="nav-link {{ 'active' if tab == 'comments' }}" href="#comments" role="tab" data-toggle="tab">
                   <i class="material-icons">comment</i>
                     Comments
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#edit-profile" role="tab" data-toggle="tab">
+                <a class="nav-link {{ 'active' if tab == 'edit-profile' }}" href="#edit-profile" role="tab" data-toggle="tab">
                   <i class="material-icons">edit</i>
                     Edit Profile
                 </a>
@@ -52,27 +52,27 @@
 </div> -->
 
 <div class="tab-content tab-space">
-    <div class="tab-pane active text-center gallery" id="liks">
+    <div class="tab-pane {{ 'active' if tab == 'like' }} text-center gallery" id="liks">
           <div class="row">
             
           </div>
       </div>
-    <div class="tab-pane  text-center gallery" id="disliks">
+    <div class="tab-pane {{ 'active' if tab == 'disliks' }} text-center gallery" id="disliks">
           <div class="row">
 
           </div>
       </div>
-    <div class="tab-pane text-center gallery" id="favorite">
+    <div class="tab-pane{{ 'active' if tab == 'favorite' }}  text-center gallery" id="favorite">
           <div class="row">
 
           </div>
       </div>
-      <div class="tab-pane text-center gallery" id="comments">
+      <div class="tab-pane {{ 'active' if tab == 'comments' }} text-center gallery" id="comments">
         <div class="row">
 
         </div>
     </div>
-    <div class="tab-pane  gallery" id="edit-profile">
+    <div class="tab-pane {{ 'active' if tab == 'edit-profile' }} gallery" id="edit-profile">
           <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">Profile </h4>
