--- a/Themes/user/index.html
+++ b/Themes/user/index.html
@@ -90,6 +90,10 @@
                         {{ form.email(class='form-control') }}
                       </div>
                       <div class="form-group">
+                        {{ form.old_password.label }}
+                        {{ form.old_password(class='form-control') }}
+                      </div>
+                      <div class="form-group">
                         {{ form.password.label }}
                         {{ form.password(class='form-control') }}
                       </div>
