Show Profile Image (User Panle)

--- a/Themes/user/base-profile.html
+++ b/Themes/user/base-profile.html
@@ -32,7 +32,7 @@
                                 {% if current_user.image == 0 or not current_user.image %}
 	                                <img style="background-color: rgb(255, 255, 255);" src="{{ url_for('static' , filename='images/default-profile.svg') }}" alt="Circle Image" class="img-raised rounded-circle img-fluid">
                                 {% else %}
-                                    <span style="background-color: red;">This feature is not implemented, please refer to file (user/index.html).</span>
+                                    <img style="background-color: rgb(255, 255, 255);" src="{{ url_for('static' , filename='img_profile/' + current_user.image.filename) }}" alt="Circle Image" class="img-raised rounded-circle img-fluid">
                                 {% endif %}
                             </div>
 	                        <div class="name">
