--- a/Themes/user/_inc/navbar.html
+++ b/Themes/user/_inc/navbar.html
@@ -12,12 +12,12 @@
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="javascript:void(0)">
+                    <a class="nav-link" href="{{ url_for('user.logout') }}">
                         <i class="material-icons">logoute</i> logute
                     </a>
                 </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="javascript:void(0)">
+                      <a class="nav-link" href="#">
                           <i class="material-icons">home</i> Blog
                       </a>
                   </li>
