--- a/Themes/admin/_inc/navbar.html
+++ b/Themes/admin/_inc/navbar.html
@@ -24,11 +24,8 @@
         </li>
         <li class="nav-item  nav-profile dropdown border-0">
           <a class="nav-link dropdown-toggle" id="profileDropdown" href="#" data-toggle="dropdown">
-            {% if current_user.image == 0 or not current_user.image %}
-              <img class="nav-profile-img mr-2" style="background-color: #ffff;" src="{{ url_for('static' , filename='images/default-profile.svg') }}" alt="image">
-            {% else %}
-            <p>User image display is not implemented</p>
-          {% endif %}
+              <img class="nav-profile-img mr-2" style="background-color: #ffff;" src="{{ url_for('static' , filename='img_profile/' + current_user.image.filename) }}" alt="image">
+
             <span class="profile-name">{{current_user.full_name}}</span>
           </a>
           <div class="dropdown-menu navbar-dropdown w-100" aria-labelledby="profileDropdown">
