--- a/Themes/user/profile.html
+++ b/Themes/user/profile.html
@@ -21,7 +21,7 @@
         </li>
         <li class="nav-item">
           <a class="nav-link {{ 'active' if tab == 'favorite' }}" href="#favorite" role="tab" data-toggle="tab">
-            <i class="material-icons">favorite</i>
+            <i class="material-icons">bookmark</i>
             Favorite
           </a>
         </li>
@@ -60,7 +60,7 @@
   </div>
   <div class="tab-pane{{ 'active' if tab == 'favorite' }}  text-center gallery" id="favorite">
     <div class="row">
-
+      <iframe src="{{ url_for('user._show_posts' , q='saved') }}" frameborder="0" style="width: 100%;min-height:720px;"></iframe>
     </div>
   </div>
   <div class="tab-pane {{ 'active' if tab == 'comments' }} text-center gallery" id="comments">
