--- a/Themes/user/_posts.html
+++ b/Themes/user/_posts.html
@@ -25,7 +25,7 @@
                 <!-- begin post -->
                 <div class="col-md-4 margin-bottom-posts">
                     <div class="card">
-                        <a href="post.html">
+                        <a href="{{ url_for('blog.post' , slug=post.slug) }}">
                         <img class="img-fluid img-thumb" src="{{ url_for('library_views.madie_get' , madie_id= post.image) }}" alt="">
                         </a>
                         <div class="card-block">
