--- a/Themes/user/_inc/navbar.html
+++ b/Themes/user/_inc/navbar.html
@@ -17,7 +17,7 @@
                     </a>
                 </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="#">
+                      <a class="nav-link" href="{{ url_for('blog.index') }}">
                           <i class="material-icons">home</i> Blog
                       </a>
                   </li>
