--- a/Themes/user/_inc/navbar.html
+++ b/Themes/user/_inc/navbar.html
@@ -16,12 +16,19 @@
                         <i class="material-icons">logoute</i> logute
                     </a>
                 </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="{{ url_for('blog.index') }}">
-                          <i class="material-icons">home</i> Blog
-                      </a>
-                  </li>
 
+                  <li class="nav-item">
+                    {% if current_user.role == 1 %}
+                        <a class="nav-link" href="{{ url_for('blog.index') }}">
+                            <i class="material-icons">dashboard</i> Admin Panle
+                        </a>
+                    {% endif %}
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('blog.index') }}">
+                        <i class="material-icons">home</i> Blog
+                    </a>
+                </li>
 
             </ul>
         </div>
