--- a/Themes/user/_inc/navbar.html
+++ b/Themes/user/_inc/navbar.html
@@ -19,7 +19,7 @@
 
                   <li class="nav-item">
                     {% if current_user.role == 1 %}
-                        <a class="nav-link" href="{{ url_for('blog.index') }}">
+                        <a class="nav-link" href="{{ url_for('admin.index') }}">
                             <i class="material-icons">dashboard</i> Admin Panle
                         </a>
                     {% endif %}
