--- a/Themes/user/_inc/navbar.html
+++ b/Themes/user/_inc/navbar.html
@@ -16,6 +16,13 @@
                         <i class="material-icons">logoute</i> logute
                     </a>
                 </li>
+                {% if current_user.role == 1 %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('admin.index') }}">
+                            <i class="material-icons">dashboard</i> Admin Panel
+                        </a>
+                    </li>
+                {% endif %}
                   <li class="nav-item">
                       <a class="nav-link" href="{{ url_for('blog.index') }}">
                           <i class="material-icons">home</i> Blog
