Add a link to the profile page

--- a/Themes/admin/_inc/sidebar.html
+++ b/Themes/admin/_inc/sidebar.html
@@ -1,7 +1,7 @@
 <nav class="sidebar sidebar-offcanvas" id="sidebar">
     <div class="text-center sidebar-brand-wrapper d-flex align-items-center">
-      <a class="sidebar-brand brand-logo" href="index.html"><img src="{{ url_for('static' , filename='images/logo.svg') }}" alt="logo" /></a>
-      <a class="sidebar-brand brand-logo-mini pl-4 pt-3" href="index.html"><img src="{{ url_for('static' , filename='images/logo.svg') }}" alt="logo" /></a>
+      <a class="sidebar-brand brand-logo" href="{{ url_for('admin.index') }} " ><img src="{{ url_for('static' , filename='images/logo.svg') }}" alt="logo" /></a>
+      <a class="sidebar-brand brand-logo-mini pl-4 pt-3" href="{{ url_for('admin.index') }}"><img src="{{ url_for('static' , filename='images/logo.svg') }}" alt="logo" /></a>
     </div>
     <ul class="nav">
       <li class="nav-item nav-profile">
@@ -28,6 +28,10 @@
         <a class="nav-link" href="{{url_for('admin.index')}}">
           <i class="mdi mdi-home menu-icon"></i>
           <span class="menu-title">Dashboard</span>
+        </a>
+        <a class="nav-link" href="{{url_for('blog.index')}}">
+          <i class="mdi mdi-web menu-icon"></i>
+          <span class="menu-title">View Website</span>
         </a>
       </li>
 
