Adding more settings and separating the settings argument

--- a/Themes/admin/settings/site.html
+++ b/Themes/admin/settings/site.html
@@ -23,23 +23,13 @@
             </div>
             
             <div class="form-group">
-                {{form.title_home.label}}
-                {{form.title_home(class='form-control' , placeholder=form.title_home.label.text)}}
+                {{form.logo_site.label}}
+                {{form.logo_site(class='form-control' , placeholder=form.logo_site.label.text)}}
             </div>
 
             <div class="form-group">
-                {{form.h1_home.label}}
-                {{form.h1_home(class='form-control' , placeholder=form.h1_home.label.text)}}
-            </div>
-
-            <div class="form-group">
-                {{form.description.label}}
-                {{form.description(class='form-control' , placeholder=form.description.label.text)}}
-            </div>
-
-            <div class="form-group">
-                {{form.footer.label}}
-                {{form.footer(class='form-control' , placeholder=form.footer.label.text)}}
+                {{form.search_placeholder.label}}
+                {{form.search_placeholder(class='form-control' , placeholder=form.search_placeholder.label.text)}}
             </div>
 
             <button type="submit" class="btn btn-primary mr-2"> Save </button>
