Add a new settings link to the sidebar of the admin panel

--- a/Themes/admin/_inc/sidebar.html
+++ b/Themes/admin/_inc/sidebar.html
@@ -162,6 +162,12 @@
             <li class="nav-item  ">
               <a class="nav-link " href="{{ url_for('admin.setting_site') }}">Site Settings</a>
             </li>
+            <li class="nav-item  ">
+              <a class="nav-link " href="{{ url_for('admin.setting_index_page') }}">Index Page (Home) Settings</a>
+            </li>
+            <li class="nav-item  ">
+              <a class="nav-link " href="{{ url_for('admin.setting_footer') }}">Footer Settings</a>
+            </li>
           </ul>
         </div>
       </li>
