--- a/Themes/admin/settings/site.html
+++ b/Themes/admin/settings/site.html
@@ -12,7 +12,7 @@
         <h4 class="card-title">{{title}}</h4>
 
 
-            <form action="{{ url_for('admin.setting_site') }}" method="POST" class="forms-sample">
+            <form action="{{ url_for('admin.setting_site') }}" method="POST" class="forms-sample" enctype="multipart/form-data">
             {% include '_inc/form_error_msg.html' %}
             {{form.hidden_tag()}}
 
