--- a/Themes/admin/_inc/footer.html
+++ b/Themes/admin/_inc/footer.html
@@ -1,6 +1,12 @@
 <footer class="footer">
-    <div class="d-sm-flex justify-content-center justify-content-sm-between">
-      <span class="text-muted d-block text-center text-sm-left d-sm-inline-block">Copyright © bootstrapdash.com 2020</span>
-      <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center"> Free <a href="https://www.bootstrapdash.com/" target="_blank">Bootstrap dashboard template</a> from Bootstrapdash.com</span>
+    <div style="text-align: center;">
+      <br>
+      <span class="">Copyright © bootstrapdash.com 2020</span>
+      <br>
+      <span class=""> Free <a href="https://www.bootstrapdash.com/" target="_blank">Bootstrap dashboard template</a> from Bootstrapdash.com</span>
+      <br>
+      <span class=""> The source code of the html template of the admin panel <a href="https://www.bootstrapdash.com/product/breeze-admin" target="_blank">source</span>
+      <br>
+      <span><a href="https://github.com/alireza01100011/Blog-With-Falsk">The source code page of the entire blog GITHUB</a></span>
     </div>
-  </footer>
+</footer>
