Removing some elements from the admin panel bar

--- a/Themes/admin/_inc/navbar/_message.html
+++ b/Themes/admin/_inc/navbar/_message.html
@@ -1,4 +1,4 @@
-
+<!-- 
 <li class="nav-item dropdown d-none d-sm-flex">
     <a class="nav-link count-indicator dropdown-toggle" id="messageDropdown" href="#" data-toggle="dropdown">
       <i class="mdi mdi-email-outline"></i>
@@ -16,4 +16,7 @@
       
       <h6 class="p-3 mb-0 ">See all activity</h6>
     </div>
-  </li>
+  </li> -->
+
+
+  <!-- These sections were successfully deactivated (they will be activated in the next versions) -->
