--- a/Themes/admin/_inc/navbar/_notification.html
+++ b/Themes/admin/_inc/navbar/_notification.html
@@ -1,4 +1,4 @@
-<li class="nav-item dropdown">
+<!-- <li class="nav-item dropdown">
     <a class="nav-link count-indicator dropdown-toggle" id="notificationDropdown" href="#" data-toggle="dropdown">
       <i class="mdi mdi-bell-outline"></i>
       <span class="count count-varient1">1</span>
@@ -18,4 +18,7 @@
       <div class="dropdown-divider"></div>
       <p class="p-3 mb-0 ">View all activities</p>
     </div>
-  </li>
+</li> -->
+
+
+  <!-- These sections were successfully deactivated (they will be activated in the next versions) -->
