--- a/Themes/admin/_inc/navbar/_search.html
+++ b/Themes/admin/_inc/navbar/_search.html
@@ -1,4 +1,4 @@
-<li class="nav-item nav-search border-0 ml-1 ml-md-3 ml-lg-5 d-none d-md-flex">
+<!-- <li class="nav-item nav-search border-0 ml-1 ml-md-3 ml-lg-5 d-none d-md-flex">
     <form class="nav-link form-inline mt-2 mt-md-0">
       <div class="input-group">
         <input type="text" class="form-control" placeholder="Search">
@@ -9,4 +9,7 @@
         </div>
       </div>
     </form>
-  </li>
+  </li> -->
+
+
+<!-- These sections were successfully deactivated (they will be activated in the next versions) -->
