--- a/Themes/admin/_inc/navbar.html
+++ b/Themes/admin/_inc/navbar.html
@@ -12,7 +12,7 @@
 
       </ul>
       <ul class="navbar-nav navbar-nav-right ml-lg-auto">
-        <li class="nav-item dropdown d-none d-xl-flex border-0">
+        <!-- <li class="nav-item dropdown d-none d-xl-flex border-0">
           <a class="nav-link dropdown-toggle" id="languageDropdown" href="#" data-toggle="dropdown">
             <i class="mdi mdi-earth"></i> English </a>
           <div class="dropdown-menu navbar-dropdown" aria-labelledby="languageDropdown">
@@ -21,7 +21,9 @@
             <a class="dropdown-item" href="#"> Latin </a>
             <a class="dropdown-item" href="#"> Japanese </a>
           </div>
-        </li>
+        </li> -->
+        <!-- These sections were successfully deactivated (they will be activated in the next versions) -->
+        
         <li class="nav-item  nav-profile dropdown border-0">
           <a class="nav-link dropdown-toggle" id="profileDropdown" href="#" data-toggle="dropdown">
               <img class="nav-profile-img mr-2" style="background-color: #ffff;" src="{{ url_for('static' , filename='img_profile/' + current_user.image.filename) }}" alt="image">
